index in chunks to prevent buffer overflow

--- a/public/css/photoindex.css
+++ b/public/css/photoindex.css
@@ -50,7 +50,11 @@ body.dark.dark.photoindex {
 	background-position: center;
 	background-color: #222;
 	position: relative;
-	opacity: 0.8;
+	opacity: .7;
+	transition: opacity .3s ease-out;
+	-moz-transition: opacity .3s ease-out;
+	-webkit-transition: opacity .3s ease-out;
+	-o-transition: opacity .3s ease-out;
 }
 
 .photoThumbnail:hover {
@@ -150,22 +154,6 @@ body.dark.dark.photoindex {
 	color: #5cb3fd;
 }
 
-.popover-content-wrapper {
-	overflow: auto;
-}
-
-.popoverContent {
-}
-
-.popoverContent .seriesThumbnail {
-	width: 100px;
-	height: 100px;
-	background-image: url('/photo/1/300');
-	background-size: cover;
-	background-repeat: no-repeat;
-	display: inline-block;
-}
-
 .navigationPane {
 	height: 100%;
 	width: 25%;
@@ -220,6 +208,14 @@ body.dark.dark.photoindex {
 	background-position: center;
 	opacity: 0.6;
 	border: 2px solid black;
+	transition: opacity .3s ease-out;
+	-moz-transition: opacity .3s ease-out;
+	-webkit-transition: opacity .3s ease-out;
+	-o-transition: opacity .3s ease-out;
+}
+
+.photoSeries .seriesThumbnail:hover {
+	opacity: 0.8;
 }
 
 .photoSeries .seriesThumbnail.selected {
